--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,6 +1,6 @@
 /* Import des composants */
-@import url('/DaCar/assets/css/components/brands.css');
-@import url('/DaCar/assets/css/components/testimonials.css');
+@import url('../css/components/brands.css');
+@import url('../css/components/testimonials.css');
 
 /* Variables globales */
 :root {
